# queue

./: README.md  package-lock.json  package.json
.github/workflows/: build-on-pr.yml  react_build_test.yml  rust.yml
src/: App.css  App.js  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: localStorage.rs  local_storage.rs  main.rs  tests.rs  todo.rs  update.rs
src/Components/: Menubar.js  Sidebar.js  ThemeToggler.js
src/Components/Modal/: Modal.js  NewToDoModal.css  NewToDoModal.js  modal.css
src/Components/NewToDoModal/: NewToDoModal.js  modal.css
src/Components/Sidebar/: Sidebar.css  Sidebar.js  SidebarData.js
src/Components/Taskview/: Task.css  Task.js  Taskview.css  Taskview.js
src/Components/Taskview/TaskComponents/: Boxed.css  Boxed.js  Date.css  Date.js  Subject.css  Subject.js
src/Components/ThemeToggle/: ThemeToggler.css  ThemeToggler.js
src/styles/: App.css  theme.css
test-app/src/: index.js
testFiles/: Queue.config  todo.txt
todo_lib/: Cargo.toml
todo_lib/src/: lib.rs  parser.rs  task.rs  taskList.rs  task_list.rs  tests.rs  utils.rs
