[package]
name = "app"
version = "0.1.0"
description = "A Task and organisation app, written in JavaScript and Rust, using Tauri and React"
authors = ["you"]
license = ""
repository = "/EngineeringDeveloper/Queue"
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
todo-txt = {version = "2.0", features = ["serde-support"] }
# reqwest = {version= "0.11.6", features = ["json"] }
# tempfile = "3.2.0"
# bytes = "1.1.0"
# open = "2.0.1"
# tokio = {version="1.14.0", features = ["macros", "rt-multi-thread"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
